fix(bottomMenu): bottom menu being hidden by taskbar

--- a/src/components/Account/AccountMobile.module.css
+++ b/src/components/Account/AccountMobile.module.css
@@ -1,12 +1,16 @@
 .accountMobile {
-  height: 100vh;
+  position: relative;
+
+  height: 90vh;
   width: 100vw;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   padding-bottom: 20px;
-  position: relative;
+  border: 1px solid red;
 }
 
 .accountMobileContent {
