--- a/src/components/MainCanvas/MainCanvas.module.css
+++ b/src/components/MainCanvas/MainCanvas.module.css
@@ -3,10 +3,3 @@
   width: 100%;
   overflow: hidden;
 }
-
-canvas {
-  width: 100%;
-  height: 100vh;
-  margin: 0 auto;
-  padding: 0;
-}
